# k8s-rag-chatbot

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.api  Dockerfile.prod  Dockerfile.ui  INSTALLATION_GUIDE.md  LICENSE  PROFILE_README.md  PROJECT_MAP.md  README.md  docker-compose.monitoring.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
docs/: DEPLOYMENT_CHECKLIST.md  RUNBOOK.md  SECURITY.md
implementation/: PHASE_01_FOUNDATION.md  PHASE_02_SECURITY.md  PHASE_03_COST_CONTROLS.md  PHASE_04_AUTH.md  PHASE_05_OBSERVABILITY.md  PHASE_06_RAG_QUALITY.md  PHASE_07_EVALUATION.md  PHASE_08_HITL.md  PHASE_09_ADVANCED.md  PHASE_10_DEPLOYMENT.md  ROADMAP_TO_PRODUCTION.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
monitoring/alertmanager/: alertmanager.yml
monitoring/prometheus/: alerts.yml  prometheus.yml
scripts/: ingest.py
src/advanced/: model_fallback.py  multi_tenant.py  prompting.py  semantic_cache.py
src/agent/: graph.py  memory.py  nodes.py  prompts.py
src/api/: approval_routes.py  auth_routes.py  main.py  schemas.py
src/auth/: api_keys.py  audit.py  dependencies.py  (+2 more)
tests/: conftest.py  test_advanced.py  test_agent.py  test_api.py  test_auth.py  test_cost_control.py  test_evaluation.py  test_feature_flags.py  test_hitl.py  test_ingestion.py  test_observability.py  test_rag_quality.py  test_security.py
(+35 files in other folders)
